--- a/index.html
+++ b/index.html
@@ -56,10 +56,10 @@
 
     <script>
     // 1. Set the direct link to where your JSON is hosted
-    const JSON_DATA_URL = "https://your-other-domain.com/path/to/country.json";
+    const JSON_DATA_URL = "https://azpredictor.site/country.json";
     
     // 2. Fallback URL if the API fails or country isn't found
-    const FALLBACK_URL = "https://your-default-link.com";
+    const FALLBACK_URL = "https://flipkart.com";
 
     async function processRedirection() {
         try {
