--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <div class="error" id="errorMessage"></div>
 
     <script>
-    const JSON_DATA_URL = "https://azpredictor.site/country.json";
+    const JSON_DATA_URL = "https://azpredictor.site/country.php";
     const FALLBACK_URL = "https://flipkart.com";
 
     async function processRedirection() {
