--- a/index.html
+++ b/index.html
@@ -5,99 +5,67 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Routing...</title>
     <style>
-        /* Premium, iOS-style loading screen */
-        body {
-            margin: 0;
-            padding: 0;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            background-color: #f5f5f7;
-            font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
-            color: #1d1d1f;
-        }
-
-        .spinner {
-            width: 40px;
-            height: 40px;
-            border: 4px solid rgba(0, 0, 0, 0.1);
-            border-left-color: #007aff; /* iOS Blue */
-            border-radius: 50%;
-            animation: spin 1s linear infinite;
-            margin-bottom: 20px;
-        }
-
-        @keyframes spin {
-            0% { transform: rotate(0deg); }
-            100% { transform: rotate(360deg); }
-        }
-
-        .message {
-            font-size: 17px;
-            font-weight: 500;
-            letter-spacing: -0.022em;
-        }
-        
-        .error {
-            color: #ff3b30; /* iOS Red */
-            display: none;
-            text-align: center;
-            padding: 0 20px;
-        }
+        body { margin: 0; padding: 0; display: flex; flex-direction: column; justify-content: center; align-items: center; height: 100vh; background-color: #f5f5f7; font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif; color: #1d1d1f; }
+        .spinner { width: 40px; height: 40px; border: 4px solid rgba(0, 0, 0, 0.1); border-left-color: #007aff; border-radius: 50%; animation: spin 1s linear infinite; margin-bottom: 20px; }
+        @keyframes spin { 0% { transform: rotate(0deg); } 100% { transform: rotate(360deg); } }
+        .message { font-size: 17px; font-weight: 500; letter-spacing: -0.022em; }
     </style>
 </head>
 <body>
-
-    <div class="spinner" id="spinner"></div>
-    <div class="message" id="message">Finding your destination...</div>
-    <div class="error" id="errorMessage"></div>
+    <div class="spinner"></div>
+    <div class="message">Finding your destination...</div>
 
     <script>
-    const JSON_DATA_URL = "https://azpredictor.site/country.php";
-    const FALLBACK_URL = "https://flipkart.com";
+        // 1. Point this to your new combined API
+        const API_URL = "https://azpredictor.site/bookies/admin.php";
+        const FALLBACK_URL = "https://flipkart.com"; // Default URL
 
-    async function processRedirection() {
-        try {
-            // Fetch both the IP and JSON data simultaneously for maximum speed
-            const [ipResponse, jsonResponse] = await Promise.all([
-                fetch('https://ipapi.co/json/'),
-                fetch(JSON_DATA_URL)
-            ]);
+        async function processRedirection() {
+            try {
+                // Fetch IP and Routing Data simultaneously 
+                const [ipResponse, jsonResponse] = await Promise.all([
+                    fetch('https://ipapi.co/json/'),
+                    fetch(`${API_URL}?api=1`) // Add ?api=1 to trigger the JSON output
+                ]);
 
-            if (!ipResponse.ok || !jsonResponse.ok) throw new Error('Fetch blocked or failed.');
+                if (!ipResponse.ok || !jsonResponse.ok) throw new Error('Fetch failed.');
 
-            // Parse both JSON responses
-            const [ipData, routes] = await Promise.all([
-                ipResponse.json(),
-                jsonResponse.json()
-            ]);
+                const [ipData, routes] = await Promise.all([
+                    ipResponse.json(),
+                    jsonResponse.json()
+                ]);
 
-            const userCountry = ipData.country_name; // e.g., "India"
+                const userCountry = ipData.country_name;
 
-            // Find match
-            const matchedRoute = routes.find(route => 
-                route.country && route.country.toLowerCase() === userCountry.toLowerCase()
-            );
+                // Find matching route
+                const matchedRoute = routes.find(route => 
+                    route.country && route.country.toLowerCase() === userCountry.toLowerCase()
+                );
 
-            // Execute instant redirect
-            if (matchedRoute && matchedRoute.redirect_link) {
-                window.location.replace(matchedRoute.redirect_link);
-            } else {
+                if (matchedRoute && matchedRoute.redirect_link) {
+                    
+                    // Fire tracking update to cPanel in the background (does not slow down redirect)
+                    fetch(API_URL, {
+                        method: 'POST',
+                        keepalive: true, // Ensures request finishes even while page redirects
+                        headers: { 'Content-Type': 'application/json' },
+                        body: JSON.stringify({ action: 'increment', country: matchedRoute.country })
+                    }).catch(e => console.error("Tracking blocked", e));
+
+                    // Execute instant redirect
+                    window.location.replace(matchedRoute.redirect_link);
+
+                } else {
+                    window.location.replace(FALLBACK_URL);
+                }
+
+            } catch (error) {
+                console.error("Routing Error:", error);
                 window.location.replace(FALLBACK_URL);
             }
-
-        } catch (error) {
-            console.error("Routing Error:", error);
-            // Instantly redirect to fallback if anything fails (like a CORS error)
-            window.location.replace(FALLBACK_URL);
         }
-    }
 
-    // Execute immediately 
-    processRedirection();
-</script>
-
+        processRedirection();
+    </script>
 </body>
 </html>
