--- a/index.html
+++ b/index.html
@@ -15,57 +15,55 @@
     <div class="spinner" id="spinner"></div>
     <div class="message" id="message">Finding your destination...</div>
 
-    <script>
-        // Only points to the public tracking file. The admin file remains a secret.
-        const PUBLIC_API_URL = "https://azpredictor.site/bookies/route.php";
+   <script>
+    const PUBLIC_API_URL = "https://azpredictor.site/bookies/route.php";
 
-        async function processRedirection() {
-            try {
-                // Fetch IP and Routing Data simultaneously for maximum speed
-                const [ipResponse, jsonResponse] = await Promise.all([
-                    fetch('https://ipapi.co/json/'),
-                    fetch(PUBLIC_API_URL) 
-                ]);
+    async function processRedirection() {
+        try { 
+            // 1. Fetch IP 
+            const ipResponse = await fetch('https://ipapi.co/json/');
+            if (!ipResponse.ok) throw new Error(`IP API Blocked (Error ${ipResponse.status})`);
+            const ipData = await ipResponse.json();
+            const userCountry = ipData.country_name;
 
-                if (!ipResponse.ok || !jsonResponse.ok) throw new Error('Network response was not ok');
+            // 2. Fetch Routes
+            const jsonResponse = await fetch(PUBLIC_API_URL);
+            if (!jsonResponse.ok) throw new Error(`cPanel blocked the request (Error ${jsonResponse.status})`);
+            const routes = await jsonResponse.json();
 
-                const [ipData, routes] = await Promise.all([
-                    ipResponse.json(),
-                    jsonResponse.json()
-                ]);
+            // 3. Match Route
+            const matchedRoute = routes.find(route => 
+                route.country && route.country.toLowerCase() === userCountry.toLowerCase()
+            );
 
-                const userCountry = ipData.country_name;
+            if (matchedRoute && matchedRoute.redirect_link) {
+                // Send tracking request
+                fetch(PUBLIC_API_URL, {
+                    method: 'POST',
+                    keepalive: true, 
+                    headers: { 'Content-Type': 'application/json' },
+                    body: JSON.stringify({ action: 'increment', country: matchedRoute.country })
+                }).catch(e => console.error(e));
 
-                // Find matching route
-                const matchedRoute = routes.find(route => 
-                    route.country && route.country.toLowerCase() === userCountry.toLowerCase()
-                );
-
-                if (matchedRoute && matchedRoute.redirect_link) {
-                    // Fire tracking update to cPanel in the background
-                    fetch(PUBLIC_API_URL, {
-                        method: 'POST',
-                        keepalive: true, 
-                        headers: { 'Content-Type': 'application/json' },
-                        body: JSON.stringify({ action: 'increment', country: matchedRoute.country })
-                    }).catch(e => console.error(e));
-
-                    // Execute instant redirect
-                    window.location.replace(matchedRoute.redirect_link);
-                } else {
-                    // NO FALLBACK: Stop spinner and show message
-                    document.getElementById('spinner').style.display = 'none';
-                    document.getElementById('message').innerText = "Content is not available in your region.";
-                }
-
-            } catch (error) {
-                // Failsafe: Stop spinner if user has aggressive adblockers blocking the IP API
+                window.location.replace(matchedRoute.redirect_link);
+            } else {
                 document.getElementById('spinner').style.display = 'none';
-                document.getElementById('message').innerText = "Unable to route request.";
+                document.getElementById('message').innerText = `No link found for: ${userCountry}`;
             }
-        }
 
-        processRedirection();
-    </script>
+        } catch (error) {
+            // Print the exact error to the screen
+            document.getElementById('spinner').style.display = 'none';
+            document.getElementById('message').innerHTML = `
+                <span style="color: #ff3b30;">Error:</span> ${error.message} <br><br>
+                <span style="font-size: 13px; color: #86868b;">Are you using an Adblocker? Check console for details.</span>
+            `;
+            console.error("Detailed Error:", error);
+        }
+    }
+
+    processRedirection();
+</script>
+
 </body>
 </html>
